--- a/dev.html
+++ b/dev.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-i" />
     <title>Lab 6</title>
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
